Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6863465/T6863465a.out
T6863465a.java:11:12: compiler.err.cyclic.inheritance: T6863465a.c
1 error
